k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: quay.io/openshift-pipeline/vote-ui:latest
          resources:
              requests:
                memory: "512Mi"
                cpu: "250m"
              limits:
                memory: "1024Mi"
                cpu: "500m"
          imagePullPolicy: Always
          name: ui
          ports:
            - containerPort: 8080
              protocol: TCP
